fix: hide overflow on mat-table headers everywhere in portal next
(cherry picked from commit 92206f1e0deefca0f62de5167b0f65adc52bd806)

--- a/gravitee-apim-portal-webui-next/src/scss/material-design-overrides.scss
+++ b/gravitee-apim-portal-webui-next/src/scss/material-design-overrides.scss
@@ -49,6 +49,7 @@ table.mat-mdc-table {
   --mat-table-row-item-outline-color: #{theme.$table-border-color};
   --mat-table-background-color: #{theme.$table-header-background-color};
 
+  overflow: hidden;
   border: 1px solid theme.$table-border-color;
   border-radius: 16px;
 
